--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^9.0.4",
     "apollo-server": "^3.10.2",
+    "apollo-server-core": "^3.10.2",
     "bcryptjs": "^2.4.3",
     "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.10.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.0"
+    "mongoose": "^6.6.0",
+    "ws": "^8.8.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
